--- a/app/views/layouts/home/_slider.html.erb
+++ b/app/views/layouts/home/_slider.html.erb
@@ -14,7 +14,7 @@
 		<div class="carousel-inner">
 			<div class="item active"> <%= image_tag "bg1.jpg", class: "img-responsive" %>
 			  <div class="slider-content">
-			    <div class="col-md-12 text-center">
+			    <div class="col-md-12 col-sm-12 text-center">
 			      <h2 class="animated2"><span>Welcome to <strong>Learn English</strong></span> </h2>
 			      <h3 class="animated3"><span>The ultimate platform for learning User Experience &amp; User Interface</span> </h3>
 			      <p class="animated4"><a href="#" class="slider btn btn-system btn-large">Get Started Now</a> </p>
@@ -24,7 +24,7 @@
 			<!--/ Carousel item end -->
 			<div class="item"> <%= image_tag "bg1.jpg", class: "img-responsive" %>
 			  <div class="slider-content">
-			    <div class="col-md-12 text-center">
+			    <div class="col-md-12 col-sm-12 text-center">
 			      <h2 class="animated4"> <span><strong>Learn English</strong> for the highest</span> </h2>
 			      <h3 class="animated5"> <span>The key resource of your Success</span> </h3>
 			    </div>
@@ -33,7 +33,7 @@
 			<!--/ Carousel item end -->
 			<div class="item"> <%= image_tag "bg1.jpg", class: "img-responsive" %>
 			  <div class="slider-content">
-			    <div class="col-md-12 text-center">
+			    <div class="col-md-12 col-sm-12 text-center">
 			      <h2 class="animated7"> <span>The way of your <strong>Success</strong></span> </h2>
 			      <h3 class="animated8"> <span>Why you are waiting?</span> </h3>
 			      <div class=""> <a class="animated4 slider btn btn-system btn-large btn-min-block" href="#">Check it Now</a></div>
