--- a/app/views/layouts/home/_header.html.erb
+++ b/app/views/layouts/home/_header.html.erb
@@ -6,12 +6,12 @@
           <!-- Stat Toggle Nav Link For Mobiles -->
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <i class="fa fa-bars"></i> </button>
           <!-- End Toggle Nav Link For Mobiles --> 
-          <a class="navbar-brand" href="#" style="color: #d33;font-size:30px;font-weight:bold;">Learn<span style="color: rgba(0,0,0,.7);">English</span></a> </div>
+          <a class="navbar-brand" href="/" style="color: #d33;font-size:30px;font-weight:bold;">Learn<span style="color: rgba(0,0,0,.7);">English</span></a> </div>
         <div class="navbar-collapse collapse"> 
        
           <!-- Start Navigation List -->
           <ul class="nav navbar-nav navbar-right">
-            <li> <a class="active" href="/">Home</a></li>
+            <li><a class="active" href="/">Home</a></li>
             <li><a href="#">Contact</a> </li>
             <% if user_signed_in? %>
               <li>
